# cpp-ci-template

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cc
.circleci/: config.yml
gemv/: CMakeLists.txt  gemv.h
tests/: CMakeLists.txt  test_gemv.cc
